# podcast-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: process-daily.yml
docs/: setup.md
src/: main.py
src/analyze/: deepseek_client.py  prompt_engineer.py
src/edit/: cutter.py  renderer.py  thumbnailer.py
src/ingest/: validator.py  youtube.py
src/notify/: telegram_bot.py
src/storage/: cloudflare_r2.py
src/transcribe/: srt_generator.py  whisper_local.py
src/utils/: config.py  logger.py
tests/: conftest.py
tests/unit/: test_analyze.py  test_edit.py  test_ingest.py  test_storage.py  test_transcribe.py
